test/parser/positive/staticfielddeclaration.java
public class staticfielddeclaration {
    protected static int x;
    public staticfielddeclaration() {}
}
