test/parser/negative/InterfaceConstants.java
public interface InterfaceConstants {
  static final int x = 42;
}
